# device_board_oniro

./: .gitignore  NOTICE  README.md
hybris_generic/: .gitignore  BUILD.gn  bundle.json  device.gni
hybris_generic/audio_alsa/: common.h  vendor_capture.c  vendor_render.c
hybris_generic/audio_alsa/test_audio/: BUILD.gn  test_audio.c
hybris_generic/cfg/: BUILD.gn  hybris_graphic_env.cfg  z_composer_host_gate.cfg  z_container_fixes.cfg  z_hdcd_autostart.cfg  z_hybris_hdf_env.cfg  z_multimodalinput_caps.cfg
hybris_generic/docs/: x23-super.txt
hybris_generic/kernel/mimir/: build_kernel.sh  deploy-kernel.sh
hybris_generic/kernel/mimir/config/: openharmony.config
hybris_generic/kernel/mimir/patch/linux-5.10/: volla-mimir.patch
hybris_generic/kernel/mimir/patch/linux-5.10/common_patch/: hdf_patch.sh
hybris_generic/kernel/mimir/patches/: README.md
hybris_generic/kernel/mimir/patches/kernel-source/: ohos-adaptation.patch
hybris_generic/kernel/mimir/patches/port-repo/: libufdt.patch
hybris_generic/kernel/x23/: build_boot_img_chainload.sh  build_kernel.sh  build_super_img.sh  deploy-kernel.sh  extra-modules.list
hybris_generic/kernel/x23/config/: openharmony.config
hybris_generic/kernel/x23/patch/linux-5.10/common_patch/: hdf.patch
hybris_generic/kernel/x23/patch/linux-5.10/kernel_patch/: ohos_adaptation.patch  openharmony.config
hybris_generic/kernel/x23/patches/: README.md
hybris_generic/kernel/x23/patches/kernel-source/: camera-isp-bare-dt.patch  hdf.patch  hmdfs.patch  hyperhold.patch  hyperhold_patch.sh  ohos-adaptation.patch  sharefs.patch
hybris_generic/kernel/x23/patches/port-repo/: build-tools.patch
hybris_generic/launcher/: BUILD.gn  androidd.c  androidd.cfg  init-chainload.sh  late-camera-modules.c  wmtdetect-init.c
hybris_generic/system_patch/: do_patch.sh  generate_patches.sh  undo_patch.sh
hybris_generic/system_patch/patches/applications/standard/filepicker/: 0001-GET_BUNDLE_RESOURCES.patch  0002-AbilityCommonUtil.init-getPhotoManageHelper.patch
hybris_generic/system_patch/patches/arkcompiler/ets_frontend/: 0001-ets2panda-fix-perpetually-dirty-check_build_system_c.patch
hybris_generic/system_patch/patches/developtools/hdc/: 0001-hdc-daemon-cap-USB-bulk-reads-to-stable-size-for-hyb.patch  0002-hdc-daemon-cap-USB-bulk-writes-to-stable-size-for-hy.patch
hybris_generic/system_patch/patches/developtools/integration_verification/: 0001-integration_verification-register-hybris_generic-VDI.patch  integration_verification_20260327105546.patch
hybris_generic/system_patch/patches/drivers/peripheral/: 0001-alsa_adapter-open-PCM-blocking-set-period_time-first.patch  0002-alsa_adapter-close-snd_ctl_t-handle-in-SndElementWri.patch
hybris_generic/system_patch/patches/interface/sdk-js/: 0001-sdk-js-create-the-ohos_base_split-timestamp-output.patch
hybris_generic/utils/: create-ohos-binder-devices.py  deploy-lxc-container.sh  ohos-post-stop.sh  start-ohos.sh
hybris_generic/utils/device/: start-ohos.sh
hybris_generic/utils/device/lxc/: config
hybris_generic/utils/device/systemd/: ohos-binder-setup.service  ohos.service
hybris_generic/utils/host/: deploy-lxc-container.sh  flash-native.sh  lpunpack.py  package-deployment.sh  pull-halium-blobs.sh
hybris_generic/utils/installer/: deploy.sh
hybris_generic/utils/lxc/: config
qemu/: BUILD.gn  config.gni  device.gni  make_rootfs_pkg.sh  ohos.build
qemu/camera/: BUILD.gn
qemu/camera/pipeline_core/: BUILD.gn
qemu/cfg/: BUILD.gn  fstab.qemu  init.qemu.cfg  init.without_two_stages.cfg
qemu/distributedhardware/: BUILD.gn
qemu/kernel/: BUILD.gn  build_kernel.sh  check_patch.sh  make_dtb.mk  make_kernel.sh  make_kernel_32.mk  make_kernel_64.mk
qemu/kernel/configs/: qemu-standard-ohos_defconfig
std_emulator/: BUILD.gn  bundle.json  device.gni
std_emulator/audio_alsa/: vendor_render.c
std_emulator/audio_drivers/: Makefile
std_emulator/camera/: BUILD.gn
std_emulator/camera/pipeline_core/: BUILD.gn
std_emulator/cfg/: BUILD.gn  default.para  init.virt.cfg
std_emulator/distributedhardware/: BUILD.gn
std_emulator/kernel/: BUILD.gn  build_kernel.sh  run.bat  run.sh  std_emulator_linux_defconfig
std_emulator/kernel/patch/linux-6.6/common_patch/: hdf.patch
std_emulator/kernel/patch/linux-6.6/kernel_patch/: 0001-virt.patch
std_emulator/updater/: BUILD.gn
x86_general/: BUILD.gn  build_bootimg.py  bundle.json  device.gni  make_rpi_sdcard_image.py
x86_general/audio_alsa/: common.h  vendor_capture.c  vendor_render.c
x86_general/cfg/: BUILD.gn  fstab.x86_general  init.x86_general.cfg  init.x86_general.usb.cfg
x86_general/chipset/bluetooth/: BUILD.gn
x86_general/chipset/camera/: BUILD.gn
x86_general/chipset/camera/device_manager/: BUILD.gn
x86_general/chipset/camera/driver_adapter/: BUILD.gn
x86_general/chipset/camera/metadata_manager/: BUILD.gn
x86_general/chipset/camera/pipeline_core/: BUILD.gn
x86_general/distributedhardware/: BUILD.gn
x86_general/firmware/: BUILD.gn
x86_general/kernel/: BUILD.gn  build_kernel.sh  kernel_source_checker.sh  run.bat  run.sh  x86_general_linux_defconfig
x86_general/kernel/configs/: oh_defconfig  pocket2_defconfig  pocket2_oh_defconfig
x86_general/kernel/kernel_patch/: 0001-OHPC-DRM-ioctl.patch  0001-ashmem.patch  0001-fix-.h.patch  0001-fix-build.patch  0001-fix-hungtask.patch  0001-fix-scripts.patch  0001-remove-get_fs.patch  0002-OHPC-sharefs.patch  0002-fix-watchdog.patch  0003-OHPC-ashmem-GKI6.6.patch  0003-fix-hyperhold.patch
x86_general/modules/: BUILD.gn  modules_path.gni
x86_general/ptgenbuild/: BUILD.gn
x86_general/test/: BUILD.gn
x86_general/test/glmark2/: BUILD.gn  res_path.gni
x86_general/test/native_window_wrapper/: BUILD.gn  native_window_wrapper.cpp
x86_general/test/vulkan_triangle/: BUILD.gn  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h  VulkanUtils.cpp  VulkanUtils.h  triangle.cpp  vulkanexample.h  vulkanexamplebase.cpp  vulkanexamplebase.h
x86_general/test/vulkan_triangle/shader/: Readme.md  triangle.vert  triangle.vert.spv
(+124 files in other folders)
