# Copyright (c) 2026 Eclipse Oniro for OpenHarmony contributors.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")

group("hybris_generic_group") {
  deps = [
    "cfg:hybris_graphic_env_group",
    "cfg:hybris_input_caps_group",
    "cfg:hybris_hdcd_autostart_group",
    "cfg:hybris_device_node_perms_group",
    "cfg:hybris_hdf_env_group",
    "cfg:hybris_composer_gate_group",
    "audio_alsa/test_audio:test_audio_group",
    "launcher:androidd_group",
  ]
}
