# Copyright (c) 2026 Eclipse Oniro for OpenHarmony contributors.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

soc_company = "oniro"
soc_name = "hybris_generic"

import("//build/ohos.gni")
if (!defined(defines)) {
  defines = []
}

declare_args() {
  is_support_boot_animation = false
  is_support_graphic = false
  is_support_codec = false
}

product_config_path = "//vendor/${product_company}/${product_name}"
