# Copyright (c) 2024 Institute of Software, Chinese Academy of Sciences. 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

print("qemu_group in")
group("qemu_group") {
  deps = [
    "cfg:init_configs",
    "distributedhardware:distributedhardware",
    "//device/soc/oniro/qemu/hardware:hardware_group",
  ]
}

action("rootfs_pkg") {
  script = "make_rootfs_pkg.sh"
  outputs = [ "$root_build_dir/packages/phone/images/ohos-rootfs.tar" ]
  deps = [ 
    "//build/core/gn:images",
  ]
  args = [
    "--output",
    rebase_path("$root_build_dir/packages/phone/images"),
    "--input",
    rebase_path("$root_build_dir/packages/phone"),
  ]
}
