# Copyright (C) 2024 Open OpenHarmony Book Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")

print("std_emulator_group in")
group("std_emulator_group") {
  deps = [
    "cfg:init_configs",
    "kernel:kernel",
    "distributedhardware:distributedhardware",
    "updater:updater_files"
  ]
  if (is_support_graphic) {
    deps += [
    
    ]
  }
  if (is_support_codec) {
    deps += [
      
    ]
  }
}
