# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")

print("x86_group in")
group("x86_group") {
  deps = [
    "cfg:init_configs",
    "distributedhardware:distributedhardware",
    "kernel:x86_kernel",
    "firmware:firmware",
    # "bluetooth:libbt_vendor",
    # "modules:modules_group",
    "test:test",
  ]
}

action("x86_bootimg") {
    script = "build_bootimg.py"
    outputs = [ "$root_build_dir/packages/phone/images/boot.img" ]
    args = [ rebase_path("//") ]
}
#./build.sh --product-name x86_general --ccache --build-target x86_image
action("x86_image") {
  deps = [ 
  ":x86_bootimg",
  # "//build/core/gn:images",
  "ptgenbuild:ptgen($host_toolchain)"
   ]
  script = "./make_rpi_sdcard_image.py"
  outputs = [ "$root_build_dir/packages/phone/images/x86_image.img" ]
  args = [
    "--output",
    rebase_path("$root_build_dir/packages/phone/images/x86_image.img"),
    "--userdata",
    "1000M",
    rebase_path("$root_build_dir/packages/phone/images/boot.img"),
    rebase_path("$root_build_dir/packages/phone/images/system.img"),
    rebase_path("$root_build_dir/packages/phone/images/vendor.img"),
    rebase_path("$root_build_dir/packages/phone/images/userdata.img"),
    "--ptpath",
    rebase_path("$root_build_dir/clang_x64/device_x86_general/device_x86_general")
  ]
}