# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("device.gni")

print("x86_group in")
group("x86_group") {
  deps = [
    "cfg:init_configs",
    "distributedhardware:distributedhardware",
    "kernel:kernel",
    # "bluetooth:libbt_vendor",
    # "modules:modules_group",
  ]
}

# NOTE: the x86_general target is QEMU-emulator-only. The emulator boots the
# kernel directly via QEMU `-kernel`/`-initrd` (see kernel/run.sh), so it does
# not use a bootloader. The former `x86_bootimg` (GRUB boot.img) and `x86_image`
# (flashable SD-card/disk image via ptgen) actions, which targeted bare-metal
# UEFI boot, were removed along with their prebuilt GRUB binaries.
